Increase length of tokens

Currently, the max length of a token is 80.  This affects the window
title causing the max length of around 74.  The main usage is to allow
a really long window title.
From what I gather xterm doesn't have a limit.  If needed, this #
could be increased.

FIXED-IN: 4.10
BUG: 309763